apt (868977) UNRELEASED; urgency=low

  [ David Kalnischkies ]  
  * apt-pkg/pkgcachegen.cc:
    - refactor MergeList by creating -Group, -Package and -Version specialist
    - share description list between "same" versions (LP: #868977)
      This also means that descriptions are shared across archives now.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Oct 2011 14:51:06 +0200

apt (0.8.16~exp5ubuntu13) oneiric; urgency=low

  [ Adam Conrad ]
  * On armel, call update-apt-xapian-index with '-u' to keep the CPU
    and I/O usage low.  We would do this on all arches, but there's a
    regression risk here, but that's better than killing slow systems.
  
  [ Michael Vogt ]
  * cmdline/apt-key:
    - fix apt-key net-update, thanks to Marc Deslauriers and 
      Adam Conrad for the code review (LP: #857472)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 06 Oct 2011 16:14:41 +0200

apt (0.8.16~exp5ubuntu12) oneiric; urgency=low

  [ David Kalnischkies ]  
  * apt-pkg/deb/deblistparser.cc:
    - fix crash when the dynamic mmap needs to be remapped during
      LoadReleaseInfo (LP: #854090)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Sep 2011 13:31:11 +0200

apt (0.8.16~exp5ubuntu11) oneiric; urgency=low

  [ Colin Watson ]
  * ftparchive/cachedb.cc:
    - fix buffersize in bytes2hex
  
  [ Marc Deslauriers ]
  * SECURITY UPDATE: Disable apt-key net-update for now, as validation
    code is insecure.
    - cmdline/apt-key: exit immediately out of net_update().
    - CVE number pending

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Sep 2011 17:30:45 +0200

apt (0.8.16~exp5ubuntu10) oneiric; urgency=low

  * methods/https.cc:
    - cleanup broken downloads properly (just like http)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Sep 2011 18:26:13 +0200

apt (0.8.16~exp5ubuntu9) oneiric; urgency=low

  [ Michael Vogt ]
  * apt-pkg/acquire-item.h, apt-pkg/deb/debmetaindex.cc:
    - fix fetching translated package descriptions (including the newly